[package]
name = "service-logging"
version = "0.4.1"
authors = ["stevelr <git@somecool.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Asynchronous structured logging in tiny library (6KB) with clients for Coralogix and console.log. WASM compatible"
repository = "https://github.com/stevelr/service-logging"
homepage = "https://github.com/stevelr/service-logging"
documentation = "https://docs.rs/service-logging"
readme = "README.md"
keywords = ["logging","wasm","coralogix"]
categories = ["development-tools::debugging","api-bindings","wasm","asynchronous"]

[features]
# "std": use std allocator; "alloc": you provide allocator
default=["alloc"]
std = ["serde_json/std", "serde/std" ]
alloc = ["serde_json/alloc", "serde/alloc" ]

[dependencies]
async-trait = "0.1"
serde_repr = "0.1"
reqwest = { version="^0.10.9", features=["json"] }

# optional
serde_json = { version="1.0", default-features=false, optional=true }
serde = { version = "1.0", optional=true, features=["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version="0.3", features=["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"
tokio = { version="1.0", features=["macros","rt"] }
